--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-31 13:02:33 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/gg-13-8-99-515-806-nb-classifier.qza [28289645/28289645] -> \"CE/515f-806r-classifier.qza\" [1]\n"
+      "2022-11-01 07:26:55 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/gg-13-8-99-515-806-nb-classifier.qza [28289645/28289645] -> \"CE/515f-806r-classifier.qza\" [1]\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mUUID\u001b[0m:        9dc94ff5-9b03-465f-905c-173ad1d4cd42\n",
+      "\u001b[32mUUID\u001b[0m:        24a0655a-6f0c-4904-83fb-b1a2ee622b2d\n",
       "\u001b[32mType\u001b[0m:        FeatureData[Taxonomy]\n",
       "\u001b[32mData format\u001b[0m: TSVTaxonomyDirectoryFormat\n"
      ]
@@ -171,10 +171,10 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-kahjd3jx')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-953srnn_')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 25326f1a-4573-4976-b1a6-a30b926b7b60>"
+       "<visualization: Visualization uuid: bc235c07-9c64-496f-9bd1-fc5f5e958239>"
       ]
      },
      "execution_count": 6,
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "56de86eb-90c6-447c-bbce-fa59d822edd5",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
       "\n",
       "  The following IDs are not present in the metadata: '11488.CSB396', '11488.CSB397', '11488.CSB398', '11488.CSB696', '11488.CSB712', '11488.CSB713', '11488.CSB966', '11488.CSB969'\n",
       "\n",
-      "Debug info has been saved to /tmp/qiime2-q2cli-err-vv7eea6k.log\u001b[0m\n",
+      "Debug info has been saved to /tmp/qiime2-q2cli-err-jrfg71aa.log\u001b[0m\n",
       "\u001b[0m"
      ]
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1adc0d65-9a05-4841-9141-645fb5a8ea15",
    "metadata": {},
    "outputs": [
@@ -243,9 +243,9 @@
      "text": [
       "\u001b[31m\u001b[1mPlugin error from taxa:\n",
       "\n",
-      "  Sample IDs found in the table are missing in the metadata: {'11488.CSB713', '11488.CSB712', '11488.CSB969', '11488.CSB696', '11488.CSB397', '11488.CSB396', '11488.CSB398', '11488.CSB966'}.\n",
+      "  Sample IDs found in the table are missing in the metadata: {'11488.CSB397', '11488.CSB713', '11488.CSB396', '11488.CSB696', '11488.CSB712', '11488.CSB969', '11488.CSB966', '11488.CSB398'}.\n",
       "\n",
-      "Debug info has been saved to /tmp/qiime2-q2cli-err-ok96uax0.log\u001b[0m\n",
+      "Debug info has been saved to /tmp/qiime2-q2cli-err-9ikegcm0.log\u001b[0m\n",
       "\u001b[0m"
      ]
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b837c4b9-9a11-47a5-b968-6967c1de97ff",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mVisualization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdata_dir\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/taxa-bar-plots_v4.qzv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mVisualization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdata_dir\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/taxa-bar-plots_v4.qzv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/sdk/result.py:66\u001b[0m, in \u001b[0;36mResult.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;124;03m\"\"\"Factory for loading Artifacts and Visualizations.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     archiver \u001b[38;5;241m=\u001b[39m \u001b[43marchive\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mArchiver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Artifact\u001b[38;5;241m.\u001b[39m_is_valid_type(archiver\u001b[38;5;241m.\u001b[39mtype):\n\u001b[1;32m     69\u001b[0m         result \u001b[38;5;241m=\u001b[39m Artifact\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__new__\u001b[39m(Artifact)\n",
       "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:299\u001b[0m, in \u001b[0;36mArchiver.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m    298\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[0;32m--> 299\u001b[0m     archive \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_archive\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    300\u001b[0m     Format \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mget_format_class(archive\u001b[38;5;241m.\u001b[39mversion)\n\u001b[1;32m    301\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Format \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
       "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:259\u001b[0m, in \u001b[0;36mArchiver.get_archive\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    257\u001b[0m filepath \u001b[38;5;241m=\u001b[39m pathlib\u001b[38;5;241m.\u001b[39mPath(filepath)\n\u001b[1;32m    258\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filepath\u001b[38;5;241m.\u001b[39mexists():\n\u001b[0;32m--> 259\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist.\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m filepath)\n\u001b[1;32m    261\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _ZipArchive\u001b[38;5;241m.\u001b[39mis_archive_type(filepath):\n\u001b[1;32m    262\u001b[0m     archive \u001b[38;5;241m=\u001b[39m _ZipArchive(filepath)\n",
@@ -286,9 +286,167 @@
   {
    "cell_type": "markdown",
    "id": "6ae62e1c-61e1-4cd8-bc57-ee19f0865f06",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "To investigate how our taxonomic analysis compares to e.g. BLAST. We can open the tabular view of our ASVs and search for some features manually (click on sequence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25423286-cb1e-434c-945f-31a84a249ed5",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "**de novo tree**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f2b6181-8a90-4ecd-8c64-7c0e570ae0a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sequence alignment\n",
+    " ! qiime alignment mafft \\\n",
+    "     --i-sequences $data_dir/rep-seqs-filtered.qza \\\n",
+    "     --o-alignment $data_dir/aligned-rep-seqs.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00a14d5c-f133-48e7-b134-4526affd9ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Alignment masking\n",
+    "! qiime alignment mask \\\n",
+    "    --i-alignment $data_dir/aligned-rep-seqs.qza \\\n",
+    "    --o-masked-alignment $data_dir/masked-aligned-rep-seqs.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e41d479-6d5d-46c1-9a43-8ea64a3b9597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tree construction\n",
+    "! qiime phylogeny fasttree \\\n",
+    "    --i-alignment $data_dir/masked-aligned-rep-seqs.qza \\\n",
+    "    --o-tree $data_dir/fasttree-tree.qza\n",
+    "\n",
+    "! qiime phylogeny midpoint-root \\\n",
+    "    --i-tree $data_dir/fasttree-tree.qza \\\n",
+    "    --o-rooted-tree $data_dir/fasttree-tree-rooted.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf3ae38-9ccc-44a4-8856-f327a6771341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tree visualization\n",
+    " ! qiime empress tree-plot \\\n",
+    "     --i-tree $data_dir/fasttree-tree-rooted.qza \\\n",
+    "     --m-feature-metadata-file $data_dir/taxonomy.qza \\\n",
+    "     --o-visualization $data_dir/fasttree-tree-rooted.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d402a427-e2b4-445d-827a-341cf993d924",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Visualization.load(f'{data_dir}/fasttree-tree-rooted.qzv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10829e43-1693-4508-ba87-9ad71c36f040",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "**fragment insertion**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "483e7eae-6a95-4573-8273-a3cb6092632a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'should we use Greengenes 13_8 database as well in our case?'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"should we use Greengenes 13_8 database as well in our case?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51e30612-57e1-4ad1-b7f3-06c77434a696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! wget -nv -O $data_dir/sepp-refs-gg-13-8.qza https://data.qiime2.org/2021.4/common/sepp-refs-gg-13-8.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea13ddf4-56d2-4683-84ef-16505432944a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! qiime fragment-insertion sepp \\\n",
+    "#     --i-representative-sequences $data_dir/rep-seqs-filtered.qza \\\n",
+    "#     --i-reference-database $data_dir/sepp-refs-gg-13-8.qza \\\n",
+    "#     --p-threads 2 \\\n",
+    "#     --o-tree $data_dir/sepp-tree.qza \\\n",
+    "#     --o-placements $data_dir/sepp-tree-placements.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f27c237-e988-4dab-8904-964c5eb5a42f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   ! qiime empress tree-plot \\\n",
+    "#       --i-tree $data_dir/sepp-tree.qza \\\n",
+    "#       --m-feature-metadata-file $data_dir/taxonomy.qza \\\n",
+    "#       --o-visualization $data_dir/sepp-tree-placements-tree.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4afcb335-1ddd-4892-910a-bfeae8bd0fd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Visualization.load(f'{data_dir}/sepp-tree-placements-tree.qzv')"
    ]
   }
  ],
