trying to solve problem

--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -197,6 +197,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "69e86b8e-6a8f-4700-bdc3-98843145831b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-11-01 10:06:37 URL:https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download [42810/42810] -> \"CE/fmetadata.tsv\" [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "! wget -nv -O $data_dir/fmetadata.tsv 'https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4b5f7bcc-a85b-4ec0-9a86-24c978c5c93f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "515f-806r-classifier.qza\n",
+      "cheese-single-end-demux.qza\n",
+      "cheese-single-end-demux.qzv\n",
+      "dada2_rep_set.qza\n",
+      "dada2_rep_set.qzv\n",
+      "dada2_stats.qza\n",
+      "dada2_stats.qzv\n",
+      "dada2_table.qza\n",
+      "dada2_table.qzv\n",
+      "fmetadata.tsv\n",
+      "food-metadata.tsv\n",
+      "taxonomy_v4.qza\n",
+      "taxonomy_v4.qzv\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls -1 $data_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "029aeecc-ba4e-4370-8b94-e545d89abd81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_meta = pd.read_csv(f'{data_dir}/fmetadata.tsv', sep='\\t', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "56de86eb-90c6-447c-bbce-fa59d822edd5",
    "metadata": {},
@@ -209,7 +267,7 @@
       "\n",
       "  The following IDs are not present in the metadata: '11488.CSB396', '11488.CSB397', '11488.CSB398', '11488.CSB696', '11488.CSB712', '11488.CSB713', '11488.CSB966', '11488.CSB969'\n",
       "\n",
-      "Debug info has been saved to /tmp/qiime2-q2cli-err-jrfg71aa.log\u001b[0m\n",
+      "Debug info has been saved to /tmp/qiime2-q2cli-err-qunp4f8i.log\u001b[0m\n",
       "\u001b[0m"
      ]
     }
