--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -382,33 +382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "483e7eae-6a95-4573-8273-a3cb6092632a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'should we use Greengenes 13_8 database as well in our case?'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"should we use Greengenes 13_8 database as well in our case?\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "51e30612-57e1-4ad1-b7f3-06c77434a696",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! wget -nv -O $data_dir/sepp-refs-gg-13-8.qza https://data.qiime2.org/2021.4/common/sepp-refs-gg-13-8.qza"
+    "! wget -nv -O $data_dir/sepp-refs-gg-13-8.qza https://data.qiime2.org/2021.4/common/sepp-refs-gg-13-8.qza"
    ]
   },
   {
@@ -418,12 +397,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! qiime fragment-insertion sepp \\\n",
-    "#     --i-representative-sequences $data_dir/rep-seqs-filtered.qza \\\n",
-    "#     --i-reference-database $data_dir/sepp-refs-gg-13-8.qza \\\n",
-    "#     --p-threads 2 \\\n",
-    "#     --o-tree $data_dir/sepp-tree.qza \\\n",
-    "#     --o-placements $data_dir/sepp-tree-placements.qza"
+    "! qiime fragment-insertion sepp \\\n",
+    "    --i-representative-sequences $data_dir/rep-seqs-filtered.qza \\\n",
+    "    --i-reference-database $data_dir/sepp-refs-gg-13-8.qza \\\n",
+    "    --p-threads 2 \\\n",
+    "    --o-tree $data_dir/sepp-tree.qza \\\n",
+    "    --o-placements $data_dir/sepp-tree-placements.qza"
    ]
   },
   {
@@ -433,10 +412,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   ! qiime empress tree-plot \\\n",
-    "#       --i-tree $data_dir/sepp-tree.qza \\\n",
-    "#       --m-feature-metadata-file $data_dir/taxonomy.qza \\\n",
-    "#       --o-visualization $data_dir/sepp-tree-placements-tree.qzv"
+    "  ! qiime empress tree-plot \\\n",
+    "      --i-tree $data_dir/sepp-tree.qza \\\n",
+    "      --m-feature-metadata-file $data_dir/taxonomy.qza \\\n",
+    "      --o-visualization $data_dir/sepp-tree-placements-tree.qzv"
    ]
   },
   {
