added filter-samples command

--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -197,6 +197,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "060e93ee-0482-4fae-95e1-d1adfe1f88d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1319734682.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    --i-table $data_dir/dada2_table.qza \\\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#filter the feature table by excluding samples not present in metadata\n",
+    "! qiime feature-table filter-samples\n",
+    "    --i-table $data_dir/dada2_table.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --o-filtered-table $data_dir/dada2_table_aligned.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e11090e3-8466-4337-a0e1-7293ded1c762",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (2184926729.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [4]\u001b[0;36m\u001b[0m\n\u001b[0;31m    --i-table $data_dir/dada2_table.qza \\\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#filter the feature table by excluding samples not present in metadata\n",
+    "! qiime feature-table filter-samples\n",
+    "    --i-table $data_dir/dada2_table.qza \\\n",
+    "    --m-metadata $data_dir/food-metadata.tsv \\\n",
+    "    --o-filtered-table $data_dir/dada2_table_aligned.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "56de86eb-90c6-447c-bbce-fa59d822edd5",
    "metadata": {},
